src/test/ui/associated-const/associated-const-type-parameter-arrays-2.stderr
error[E0277]: the trait bound `A: Foo` is not satisfied
  --> $DIR/associated-const-type-parameter-arrays-2.rs:16:22
   |
LL |     const Y: usize;
   |     --------------- required by `Foo::Y`
...
LL |     let _array = [4; <A as Foo>::Y];
   |                      ^^^^^^^^^^^^^ the trait `Foo` is not implemented for `A`
   |
   = note: associated types can't be referenced in `const` contexts, like array in length

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
